--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -1,4 +1,4 @@
-<form #form="ngForm" (submit)="getData(form)">
+<form #form="ngForm" (submit)="getData(form.value.keyword)">
   <input type="text" name="keyword" id="search" ngModel />
 </form>
 
