Events showing after search

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="mainNav">
   <nav>
     <a routerLinkActive="active" routerLink="/event-list">Events</a>
     <a routerLinkActive="active" routerLink="/search-criteria">Search</a>
