--- a/src/app/event-list/event-list.component.html
+++ b/src/app/event-list/event-list.component.html
@@ -1,1 +1,5 @@
-<p>event-list works!</p>
+<div *ngFor="let event of eventData">
+  <p>Event Name: {{ event.name }}</p>
+</div>
+
+<p>this worked!</p>
