--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -1,4 +1,14 @@
-<form #form="ngForm" (submit)="getData(form.value.keyword, form.value.startDateTime, form.value.endDateTime, form.value.city)">
+<form
+  #form="ngForm"
+  (submit)="
+    getData(
+      form.value.keyword,
+      form.value.startDateTime,
+      form.value.endDateTime,
+      form.value.city
+    )
+  "
+>
   <label for="keyword">Artist/Band Name</label>
   <input type="text" name="keyword" id="search" required ngModel />
   <label for="date">Date Range</label>
