--- a/src/app/event-list/event-list.component.html
+++ b/src/app/event-list/event-list.component.html
@@ -1,14 +1,14 @@
-<div *ngFor="let event of eventData">
+<div *ngFor="let event of eventData; index as i">
   <img src="{{ event.images[0].url }}" />
   <p>Event Name: {{ event.name }}</p>
   <p>Event Date: {{ event.dates.start.localDate }}</p>
   <p>Event City: {{ event._embedded.venues[0].city.name }}</p>
-  <div *ngIf="showDetails">
+  <a href="{{ event.url }}">Go to event page</a>
+  <div *ngIf="event.showDetails">
     <p>Event Venue: {{ event._embedded.venues[0].name }}</p>
     <p>Genre: {{ event.classifications[0].genre.name }}</p>
-    <a href="{{ event.url }}">Go to event page</a>
   </div>
-  <button *ngIf="!showDetails" (click)="toggleDetails()">
+  <button *ngIf="!showDetails" (click)="toggleDetails(i)">
     See More Details
   </button>
 </div>
