Add favorited item to Bucket List page

--- a/src/app/event-list/event-list.component.html
+++ b/src/app/event-list/event-list.component.html
@@ -11,4 +11,5 @@
   <button *ngIf="!showDetails" (click)="toggleDetails(i)">
     See More Details
   </button>
+  <button (click)="addToFavorites(eventData[i])">Add to Favorites List</button>
 </div>
