--- a/src/app/bucketlist-page/bucketlist-page.component.html
+++ b/src/app/bucketlist-page/bucketlist-page.component.html
@@ -1,1 +1,14 @@
-<p>bucketlist-page works!</p>
+<div *ngFor="let favorite of favoriteList; index as i">
+  <img src="{{ favorite.images[0].url }}" />
+  <p>Event Name: {{ favorite.name }}</p>
+  <p>Event Date: {{ favorite.dates.start.localDate }}</p>
+  <p>Event City: {{ favorite._embedded.venues[0].city.name }}</p>
+  <a href="{{ favorite.url }}">Go to event page</a>
+  <!-- <div *ngIf="event.showDetails">
+    <p>Event Venue: {{ event._embedded.venues[0].name }}</p>
+    <p>Genre: {{ event.classifications[0].genre.name }}</p>
+  </div> -->
+  <!-- <button *ngIf="!showDetails" (click)="toggleDetails(i)">
+    See More Details
+  </button> -->
+</div>
