--- a/src/app/event-list/event-list.component.html
+++ b/src/app/event-list/event-list.component.html
@@ -1,15 +1,22 @@
-<div *ngFor="let event of eventData; index as i">
-  <img src="{{ event.images[0].url }}" />
-  <p>Event Name: {{ event.name }}</p>
-  <p>Event Date: {{ event.dates.start.localDate }}</p>
-  <p>Event City: {{ event._embedded.venues[0].city.name }}</p>
-  <a href="{{ event.url }}">Go to event page</a>
-  <div *ngIf="event.showDetails">
-    <p>Event Venue: {{ event._embedded.venues[0].name }}</p>
-    <p>Genre: {{ event.classifications[0].genre.name }}</p>
+<main>
+  <div class="events" *ngFor="let event of eventData; index as i">
+    <img src="{{ event.images[0].url }}" />
+    <div class="eventInfo">
+      <p>Event Name: {{ event.name }}</p>
+      <p>Event Date: {{ event.dates.start.localDate }}</p>
+      <p>Event City: {{ event._embedded.venues[0].city.name }}</p>
+
+      <div *ngIf="event.showDetails">
+        <p>Event Venue: {{ event._embedded.venues[0].name }}</p>
+        <p>Genre: {{ event.classifications[0].genre.name }}</p>
+      </div>
+      <button *ngIf="!showDetails" (click)="toggleDetails(i)">
+        See More Details
+      </button>
+      <button (click)="addToFavorites(eventData[i])">
+        Add to Favorites List
+      </button>
+      <a href="{{ event.url }}">Go to event page</a>
+    </div>
   </div>
-  <button *ngIf="!showDetails" (click)="toggleDetails(i)">
-    See More Details
-  </button>
-  <button (click)="addToFavorites(eventData[i])">Add to Favorites List</button>
-</div>
+</main>
