--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
 <div class="mainNav">
   <nav>
-    <a routerLinkActive="active" routerLink="/search-criteria">Search</a>
-    <a routerLinkActive="active" routerLink="/event-list">Events</a>
-    <a routerLinkActive="active" routerLink="/bucketlist-page">Bucket List</a>
+    <div>
+      <h1>Events for Everyone</h1>
+    </div>
+    <div class="nav">
+      <a routerLinkActive="active" routerLink="/search-criteria">Search</a>
+      <a routerLinkActive="active" routerLink="/event-list">Events</a>
+      <a routerLinkActive="active" routerLink="/bucketlist-page">Bucket List</a>
+    </div>
   </nav>
 </div>
 
