--- a/src/app/event-list/event-list.component.html
+++ b/src/app/event-list/event-list.component.html
@@ -14,7 +14,7 @@
         See More Details
       </button>
       <button (click)="addToFavorites(eventData[i])">
-        Add to Favorites List
+        Add to Bucket List
       </button>
       <a href="{{ event.url }}">Go to event page</a>
     </div>
