--- a/src/app/search-criteria/search-criteria.component.css
+++ b/src/app/search-criteria/search-criteria.component.css
@@ -1,3 +1,11 @@
+:host {
+  display: block;
+  font-family: "Raleway", sans-serif;
+  background-image: url("/assets/img/concertimage.jpg");
+  background-size: cover;
+  height: 100vh;
+}
+
 div {
   display: flex;
   justify-content: center;
@@ -7,4 +15,36 @@ div {
 form {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+label {
+  padding: 5px;
+}
+input {
+  padding: 5px;
+  margin-bottom: 5px;
+  width: 80%;
+}
+
+.buttonStyle {
+  background-color: #4f5d75;
+  color: #d4d2d5;
+  border-radius: 8px;
+  height: 5vh;
+  font-size: 15px;
+  width: 40%;
+}
+
+button:hover {
+  color: yellow;
+}
+
+.dateCityInputs {
+  width: 80%;
+}
+
+input {
+  border-radius: 5px;
+  border: 1px solid #d4d2d5;
 }
