--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -9,7 +9,8 @@
     )
   "
 >
-  <label for="keyword">Search for an event</label>
+  <!-- <label for="keyword">Search for an event</label> -->
+  <h1>Search</h1>
   <input type="text" name="keyword" id="search" required ngModel />
   <div class="dateCityInputs">
     <label for="dateStart">Start Date</label>
