--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,7 +11,8 @@ a {
   text-decoration: none;
   font-family: "Lobster Two", cursive;
   padding: 5px;
-  font-size: 20px;
+  font-size: 30px;
+  padding-left: 30px;
 }
 a:hover {
   text-decoration-line: underline;
@@ -29,8 +30,14 @@ nav {
   justify-content: space-between;
 }
 
+.nav {
+  margin-right: 20px;
+}
+
 h1 {
   color: #ffeef2;
-  padding: 5px;
-  font-size: 30px;
+  padding: 10px;
+  font-size: 35px;
+  text-shadow: 2px 2px black;
+  margin-left: 20px;
 }
