Final styling changes added.  Everything looks great and our team did a really good job.

--- a/src/app/bucketlist-page/bucketlist-page.component.html
+++ b/src/app/bucketlist-page/bucketlist-page.component.html
@@ -13,7 +13,7 @@
       <button *ngIf="!showDetails" (click)="toggleDetails(i)">
         See More Details
       </button>
-      <button (click)="removeFavorite(i)">X</button>
+      <button (click)="removeFavorite(i)">Remove Event</button>
       <a href="{{ favorite.url }}">Go to event page</a>
     </div>
   </div>
